fix overflow in y of the display

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,7 @@ body {
                 word-wrap: nowrap;
                 white-space: nowrap;
                 overflow-x: scroll;
+                overflow-y: hidden;
                 scrollbar-width: thin;
 
                 > span {
